add axios and store

--- a/package.json
+++ b/package.json
@@ -50,12 +50,15 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "@babel/polyfill": "^7.6.0",
+    "axios": "^0.19.0",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "signale": "^1.4.0",
     "vue": "^2.6.7",
-    "vue-router": "^3.0.2"
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.1"
   }
 }
