--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "request": "^2.88.0",
     "signale": "^1.4.0",
     "vue": "^2.6.7",
+    "vue-flickity": "^1.2.1",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.1"
   }
