--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "pug": "^2.0.3",
     "request": "^2.88.0",
     "signale": "^1.4.0",
+    "simple-vue-validator": "^0.16.0",
     "vue": "^2.6.7",
     "vue-flickity": "^1.2.1",
     "vue-router": "^3.0.2",
