--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "request": "^2.88.0",
     "signale": "^1.4.0",
     "simple-vue-validator": "^0.16.0",
+    "velocity-animate": "^1.5.2",
     "vue": "^2.6.7",
     "vue-flickity": "^1.2.1",
+    "vue-notification": "^1.3.16",
     "vue-router": "^3.0.2",
     "vuex": "^3.1.1"
   }
