--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack-dev-server --mode=development --hot --host 0.0.0.0",
     "build": "rm -rf dist && webpack --mode=production --progress",
+    "test": "jest",
     "reg": "node reg-util.js"
   },
   "keywords": [],
@@ -45,7 +46,9 @@
     "vue-template-compiler": "^2.6.7",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0"
+    "webpack-dev-server": "^3.2.0",
+    "jest": "^23.2.0",
+    "webdriverio": "^4.13.1"
   },
   "browserslist": [
     "last 2 versions"
