--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv-webpack": "^1.7.0",
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
     "postcss-advanced-variables": "^3.0.0",
@@ -44,17 +45,17 @@
     "terser-webpack-plugin": "^1.2.3",
     "vue-loader": "^15.6.4",
     "vue-template-compiler": "^2.6.7",
+    "webdriverio": "^4.13.1",
     "webpack": "^4.29.5",
     "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.0",
-    "jest": "^23.2.0",
-    "webdriverio": "^4.13.1"
+    "webpack-dev-server": "^3.2.0"
   },
   "browserslist": [
     "last 2 versions"
   ],
   "dependencies": {
     "@babel/polyfill": "^7.6.0",
+    "@saeris/vue-spinners": "^1.0.8",
     "axios": "^0.19.0",
     "normalize.css": "^8.0.1",
     "promptly": "^3.0.3",
